--- a/demo.html
+++ b/demo.html
@@ -13,9 +13,7 @@
 
 <nav id="menu" class="menu">
 <div class="blue-navbar">
-    <img src="imagenes/logo.png">
-    <p class="saludo">¡Hola!</p>
-    <p class="saludo2">Atlixco te desea un gran día.</p>
+    <img src="imagenes/Banner.png">
 </div>
 <div class="white-navbar">
   <div class="opciones2"></div>
