--- a/atlixco.html
+++ b/atlixco.html
@@ -15,9 +15,7 @@
 
 <nav id="menu" class="menu">
 <div class="blue-navbar">
-    <img src="imagenes/logo.png">
-    <p class="saludo">¡Hola!</p>
-    <p class="saludo2">Atlixco te desea un gran día.</p>
+    <img src="imagenes/Banner.png">
 </div>
 <div class="white-navbar">
   <div class="opciones2"></div>
@@ -97,8 +95,7 @@
             
            <img src="imagenes/logo.png" class="logoatlix"> 
 	<div id="texto">
-        <p>
-        Nacimos en 2015, somos una tour operadora que se caracteriza por el compromiso que tenemos con la región del valle de Atlixco. Somos gente joven, honestos, respetuosos y sobretodo enamorados de nuestra tierra.</p>
+        <img src="imagenes/descripa.png" id="moto">
 		</div>
 <br><p></p>
       </main>
