--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
     </ul>
            	  	  <ul>
 		  <a href="pruebas.html"><li><img src="imagenes/recom.png"><p>Recomendaciones</p></li></a>
-    </ul>                                 
+    </ul>
+       <ul>
+		  <a href=""><li><img src="imagenes/Gastr.png"><p>Gastronomía</p></li></a>
+	  </ul>
                                             
-                                 	  	  <ul>
-		  <a href=""><li><img src="imagenes/Atract.png"><p>Atractivos</p></li></a>
+    <ul>
+		  <a href="atrac.html"><li><img src="imagenes/Atract.png"><p>Atractivos</p></li></a>
 	  </ul>
            	  	  <ul>
 		  <a  href="recom.html"><li><img src="imagenes/EventFeria.png"><p>Fiestas y Eventos</p></li></a>
@@ -82,7 +85,7 @@
 <img src="imagenes/Atlixco.png" id="logomenu">
   </header>
 <div class="w3-content w3-display-container" style="max-width:100%">
-  <img class="mySlides" src="imagenes/SAM_0145.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/Floral.jpeg" style="width:100%">
   <img class="mySlides" src="imagenes/SAM_0701.JPG" style="width:100%">
   <img class="mySlides" src="imagenes/slide1.jpg" style="width:100%">
   <img class="mySlides" src="imagenes/slide3.jpg" style="width:100%">
