--- a/atrac.html
+++ b/atrac.html
@@ -29,10 +29,15 @@
 		  <a href="estable.html"><li><img src="imagenes/establecimientos2.png"><p>Establecimientos</p></li></a>
     </ul>
            	  	  <ul>
-		  <a href=""><li><img src="imagenes/recom.png"><p>Recomendaciones</p></li></a>
-    </ul>                                 
+		  <a href="pruebas.html"><li><img src="imagenes/recom.png"><p>Recomendaciones</p></li></a>
+    </ul>         
+       
+              <ul>
+		  <a href="gastro.html"><li><img src="imagenes/Gastr.png"><p>Gastronomía</p></li></a>
+	  </ul>
+       
  <ul>
-		  <a href=""><li><img src="imagenes/Atract.png"><p>Atractivos</p></li></a>
+		  <a href="atrac.html"><li><img src="imagenes/Atract.png"><p>Atractivos</p></li></a>
 	  </ul>
            	  	  <ul>
 		  <a href="recom.html"><li><img src="imagenes/EventFeria.png"><p>Fiestas y Eventos</p></li></a>
