--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		  <a href="pruebas.html"><li><img src="imagenes/recom.png"><p>Recomendaciones</p></li></a>
     </ul>
        <ul>
-		  <a href=""><li><img src="imagenes/Gastr.png"><p>Gastronomía</p></li></a>
+		  <a href="gastro.html"><li><img src="imagenes/Gastr.png"><p>Gastronomía</p></li></a>
 	  </ul>
                                             
     <ul>
