--- a/atlixco.html
+++ b/atlixco.html
@@ -86,9 +86,11 @@
 <img src="imagenes/Atlixco.png" id="logomenu">
   </header>
 <div class="w3-content w3-display-container" style="max-width:800px">
-  <img class="mySlides" src="imagenes/Atlix2.jpg" style="width:100%">
-  <img class="mySlides" src="imagenes/Atlix4%20(1).JPG" style="width:100%">
-  <img class="mySlides" src="imagenes/Atlix4%20(2).JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/_MG_2396.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/_MG_2491.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_1222.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/pasadita.PNG" style="width:100%">
+  <img class="mySlides" src="imagenes/20170205_121938.jpg" style="width:100%">
   
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
    
@@ -100,6 +102,7 @@
            <img src="imagenes/logo.png" class="logoatlix"> 
 	<div id="texto">
         <img src="imagenes/descripa.png" id="moto">
+        <img src="imagenes/atlix.png" id="pop">
 		</div>
 <br><p></p>
       </main>
