--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
 <img src="imagenes/Atlixco.png" id="logomenu">
   </header>
 <div class="w3-content w3-display-container" style="max-width:100%">
-  <img class="mySlides" src="imagenes/Floral.jpeg" style="width:100%">
-  <img class="mySlides" src="imagenes/SAM_0701.JPG" style="width:100%">
-  <img class="mySlides" src="imagenes/slide1.jpg" style="width:100%">
-  <img class="mySlides" src="imagenes/slide3.jpg" style="width:100%">
+      <img class="mySlides" src="imagenes/Floral.jpeg" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_0164.jpg" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_1829.jpg" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_2365.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_3108.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_3122.JPG" style="width:100%">
+  <img class="mySlides" src="imagenes/IMG_3122.JPG" style="width:100%">
   
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
    
